<resources>
    <string name="app_name">FoodCache</string>
    <string name="sign_in">Sign In</string>
    <string name="profile_icon">Profile</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="add_item_button">Add Item</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="days_left">Days left</string>
    <string name="save_button">Save</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="units">Units</string>
    <string name="scan">Scan</string>
    <string name="save">Save</string>
    <string name="shopping_list_ingredient">Shopping List Ingredient</string>
    <string name="prio">Prio</string>
    <string name="description">Description</string>
    <string name="barcode">Barcode</string>
    <string name="foodcache">FoodCache</string>
    <string name="debug">Debug</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>

    <string-array name="tabs">
        <item>Pantry</item>
        <item>Fridge</item>
    </string-array>

    <string-array name="cuisines">
        <item>Japanese</item>
        <item>Chinese</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Dessert</item>
        <item>Vegetarian</item>
    </string-array>

    <string-array name="units">
        <item>Items</item>
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>Cups</item>
    </string-array>
    <string name="next">Next</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_step">Add Step</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="public_string">Public</string>
    <string name="private_string">Private</string>
    <string name="search">Search</string>
    <string name="location">Location</string>

</resources>
