<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddIngredientActivity">

    <EditText
        android:id="@+id/edit_text_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <NumberPicker
        android:id="@+id/number_picker_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/expiry_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="pickDate"/>

    <Button
        android:id="@+id/add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item_button"
        android:onClick="addNote" />

</LinearLayout>