<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe.AddRecipeFragmentOne"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recipe"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edit_text_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/recipe_name" />

    <EditText
        android:id="@+id/edit_text_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Author" />

    <Spinner
        android:id="@+id/cuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_string"/>

    <Switch
        android:id="@+id/public_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/private_string"
        android:textOn="@string/public_string"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="50dp"
        android:gravity="top"
        android:layout_weight="1"
        android:hint="Description"/>

    <Button
        android:id="@+id/add_recipe_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Picture"/>

    <Button
        android:id="@+id/next_button_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

</LinearLayout>