<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inventory.EditItem">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primaryColor" />

    <EditText
        android:id="@+id/edit_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:inputType="text"
        android:padding="16dp"
        android:text="@string/ingredient"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/text_view_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ingredient"
        android:padding="16dp"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.tobiasschuerg.prefixsuffix.PrefixSuffixEditText
        android:id="@+id/edit_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_quantity"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageButton
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_quantity"
        android:src="@drawable/ic_add_circle"
        android:backgroundTint="@color/fui_transparent"
        android:onClick="addQuantity" />

    <ImageButton
        android:id="@+id/minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plus_button"
        android:src="@drawable/ic_remove_circle"
        android:backgroundTint="@color/fui_transparent"
        android:onClick="minusQuantity" />

    <TextView
        android:id="@+id/text_view_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minus_button"
        android:layout_alignParentRight="true"
        android:padding="16dp"
        android:text="@string/expiry_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/edit_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_expiry_date"
        android:layout_alignParentRight="true"
        android:onClick="pickDate"
        android:padding="16dp"
        android:text="@string/expiry_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/edit_days_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_expiry_date"
        android:layout_alignParentRight="true"
        android:padding="16dp"
        android:text="@string/days_left"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/edit_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="saveEditIngredient"
        android:padding="16dp"
        android:text="@string/save_button" />


</RelativeLayout>