<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/shopping_list_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_ingredient"
            android:layout_toStartOf="@id/shopping_list_quantity"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/shopping_list_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/shopping_list_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Units"
            android:layout_below="@id/shopping_list_quantity"
            android:layout_alignRight="@id/shopping_list_quantity"/>

        <TextView
            android:id="@+id/shopping_list_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/description"
            android:layout_below="@id/shopping_list_ingredient"/>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>