<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <EditText
            android:id="@+id/edit_text_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:maxLength="50"
            android:hint="@string/ingredient"
            android:inputType="text"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/md_black_1000" />

        <EditText
            android:id="@+id/edit_text_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_ingredient"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/md_black_1000" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/spinner_units"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_text_quantity"
            android:layout_marginHorizontal="8dp"
            android:layout_toEndOf="@+id/edit_text_quantity"
            android:backgroundTint="@color/fui_transparent"
            android:textColor="@color/md_black_1000" />

        <TextView
            android:id="@+id/expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_quantity"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/expiry_date"
            android:onClick="pickDate"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/md_black_1000"
            android:textSize="18sp" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/tab_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/expiry_date"
            android:layout_marginHorizontal="8dp"
            android:layout_toRightOf="@id/expiry_date"
            android:backgroundTint="@color/fui_transparent"
            android:textColor="@color/md_black_1000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expiry_date"
            android:orientation="horizontal">

            <Button
                android:id="@+id/discard_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="Discard"
                android:textColor="@color/md_black_1000" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="Save"
                android:textColor="@color/md_black_1000" />
        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
